# fractol

./: CMakeLists.txt  Makefile
include/: arg_parser.h  canvas.h  events.h  fill_data.h  fract_funcs.h  fract_manipulations.h  fractol.h  mlx_defs.h
src/: apply_instate.c  arg_parser.c  canvas.c  draw_fract.c  events.c  fill_data.c  fract_funcs.c  fract_manipulations.c  get_color.c  keyboard_events.c  main.c  mouse_events.c
